quelques noms de projets changer

--- a/projet_session/projet.html
+++ b/projet_session/projet.html
@@ -9,10 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="William Beaudry" />
 
 <meta name="date" content="2024-11-16" />
 
-<title>projet.Rmd</title>
+<title>Ce qui distingue les communautés autochtones du Québec à celles des autres provinces: la participation aux élections fédérales de 2004 à 2011</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,13 +350,288 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">projet.Rmd</h1>
+<h1 class="title toc-ignore">Ce qui distingue les communautés
+autochtones du Québec à celles des autres provinces: la participation
+aux élections fédérales de 2004 à 2011</h1>
+<h4 class="author">William Beaudry</h4>
 <h4 class="date">2024-11-16</h4>
 
 </div>
 
 
-
+<div id="état-du-savoir" class="section level1">
+<h1>État du savoir</h1>
+<p>Être autochtone est une expérience qui regroupe les membres des
+différentes nations et communautés des Premières Nations du Canada et
+d’ailleurs. L’édification de l’État colonial canadien s’est fait au
+dépends des premiers peuples. Marginalisés, confinés à des réserves
+dépourvus de la plupart des droits politiques des autres citoyens du
+Canada, ce n’est qu’en 1960 que le gouvernement fédéral de John
+Diefenbaker leur octroi le vote. Certaines législatures provinciales
+l’avaient déjà fait ou l’on fait par la suite, le Québec étant la
+dernière province à leur donner le droit de vote en 1969, sans débats ni
+revendications.</p>
+<p>Quels facteurs ont été mobilisés par les chercheurs pour expliquer la
+participation électorale des membres des Premières nations aux élections
+fédérales ? Plusieurs rapports postélectoraux ont mobilisé une approche
+centrée sur les ressources socio-économiques. Celles-ci sont univoques:
+les différences de statut socio-économique entre les membres des
+Premières nations et les Allochtones expliqueraient la moitié de l’écart
+de participation entre ces deux groupes (Harell et al., 2010). L’autre
+moitié de l’explication résiderait donc dans une expérience qui est
+proprement autochtone, donc des facteurs structurels.</p>
+<p>Parmi les facteurs institutionnels, plusieurs auteurs se sont penché
+sur la question de la taille des circonscriptions électorales ainsi que
+du rôle de l’information politique fournies par les institutions
+électorales. La taille de l’électorat est un facteur multidimensionnel.
+Il peut d’abord être abordé sous l’angle du choix rationel, où les
+électeurs autochtones, évaluant la taille de leur communauté,
+choisissent ou non de voter s’ils croient que les membres de leur
+communauté peuvent influencer le choix du représentant en leur faveur
+(Hill et Alport, 2010).</p>
+<p>Une autre dimension de la taille des circonscriptions, cette fois-ci
+faisant référence à son étendue géographique, est l’éloignement des
+communautés. Les électeurs éloignées de centres urbains ont une plus
+grande propension à être marginalisé par les partis politiques et la
+couverture médiatique lors de campagnes électorales étant donné des
+coûts de déplacement (Hill et Alport, 2010). Les communautés autochtones
+au Québec, étant généralement loin des centres urbains, pourraient faire
+fasse à ce genre d’enjeux d’éloignement, tandis que dans d’autres
+provinces, nombre de communautés sont plus près des centres urbains.</p>
+<p>Une dernière dimension de la taille de la circonscription est sa
+composition démographique. Les circonscriptions électorales plus grandes
+en termes d’électeurs sont également plus diversifiées sur les aspects
+ethno-culturels. La diversité linguistiques surtout serait un facteur
+qui déprécient la participation électorale (Armstrong et al., 2024).
+Ici, vu la plus faible proportion d’électeurs autochtones dans les
+circonscriptions électorales, il serait probable que l’homogénéité de la
+circonscription soit un facteur discriminant les Premières nations. Si
+le facteur linguistique semble important, Harell et al. 2010 observent
+une corrélation entre la langue et la participation qui va à l’encontre
+des attentes: des communautés qui parlent le Cri participent davantage
+aux élections fédérales que celles parlant l’anglais courrament (Harell
+et al., 2010). Les Premières nations du Québec sont celles dont les
+langues traditionnelles sont les plus vivantes du pays et il en est de
+même pour les Nunavimmiut et l’usage de l’Inuktitut au sein de l’Inuit
+Nunangat. Cependant, cette relation peut être le produit de l’histoire
+et des contextes coloniaux propres aux différentes communautés (Harell
+et al. 2010). Comme la langue seconde de nombre de communautés
+autochtones au Québec est l’anglais, la vie dans un espace francophone
+pourrait intervenir comme facteur qui déprécie la participation
+électorale dans la province, ce qui ne serait pas le cas dans les autres
+provinces.</p>
+<p>La question de recherche que nous nous posons alors est la suivante:
+<em>quelle est l’influence de la taille de la circonscription sur la
+participation aux élections fédérales de 2021 dans les communautés
+autochtones ?</em></p>
+<div id="hypothèses" class="section level2">
+<h2>Hypothèses</h2>
+<p>À partir de ce très bref État du savoir, nous en venons à découler
+une hypothèse. D’abord, nous nous attendons que la proportion plus
+faible d’électeurs autochtones dans la province du Québec ait plusieurs
+effets qui décourage la participation électorale.</p>
+<p><em>H1: la proportion d’électeurs autochtones dans une
+circonscription électorale est positivement associée à la participation
+électorale des électeurs autochtones</em></p>
+<p><em>H2: la corrélation entre la proportion d’électeurs autochtones et
+le taux de participation de ces électeurs est plus faible au Québec que
+dans le reste du Canada</em></p>
+</div>
+<div id="sélection-des-sources-bibliographiques" class="section level2">
+<h2>Sélection des sources bibliographiques</h2>
+<p>Pour produire cet état du savoir, nous avons eu recours à trois
+outils numériques de recherche. D’abord, nous avons entré notre question
+de recherche dans <em>Perplexity.ai</em> afin qu’il retravaille la
+question dans des termes optimaux pour produire une question pour le
+logiciel <em>Elicit</em>. Notre question de recherche « Comment
+expliquer la faible participation aux élections fédérales dans les
+Premières Nations du Québec comparativement à celles des autres
+provinces entre 2004 et 2011 ? » a été traduite ainsi « What factors
+explain the lower voter turnout in First Nations communities in Quebec
+compared to other Canadian provinces in federal elections between 2004
+and 2021 ? » pour faire une requête dans <em>Elicit</em>.</p>
+<p>Une fois la requête envoyé dans <em>Elicit</em>, nous avons
+sélectionnés les 16 premiers articles proposés. Ceux-ci étaient filtré
+en fonction de leur pertinence à répondre à la question de recherche et
+en fonction de la date. La période pour laquelle était choisi des textes
+étaient de 2004 à aujourd’hui.</p>
+</div>
+</div>
+<div id="méthodes-et-données" class="section level1">
+<h1>Méthodes et données</h1>
+<div id="méthodologie" class="section level2">
+<h2>Méthodologie</h2>
+</div>
+<div id="extraction-des-données" class="section level2">
+<h2>Extraction des données</h2>
+<p>Pour extraire nos données, nous avons utilisé le <em>package . En
+grande partie, le processus de création du code R a été un long échange
+entre la fonctionnalité </em>R Wizard* de ChatGPT et l’IA
+<em>Perplexity.ai</em>. Le code que nous avons roulé pour extraire les
+données est le suivant:</p>
+<p><strong>Charger les bibliothèques nécessaires</strong> library(rvest)
+library(dplyr)</p>
+<p><strong>URL de la page</strong> url &lt;- “<a href="https://www.elections.ca/content.aspx?dir=rec/part/fvt&amp;document=p4&amp;lang=f&amp;section=res" class="uri">https://www.elections.ca/content.aspx?dir=rec/part/fvt&amp;document=p4&amp;lang=f&amp;section=res</a>”</p>
+<p><strong>Lire le contenu HTML de la page</strong> page &lt;-
+read_html(url)</p>
+<p><strong>Extraire les lignes du tableau avec les balises “tr”</strong>
+table_rows &lt;- page %&gt;% html_elements(“tr”)</p>
+<p><strong>Récupérer le contenu des balises “th” (en-têtes de
+colonnes)</strong> headers &lt;- table_rows %&gt;% .[1] %&gt;%
+html_elements(“th”) %&gt;% html_text()</p>
+<p><strong>Extraire les données des balises “td” pour les rangées
+restantes</strong> data &lt;- table_rows %&gt;% .[-1] %&gt;%
+lapply(function(row) { row %&gt;% html_elements(“td”) %&gt;% html_text()
+})</p>
+<p><strong>Convertir les données en data frame</strong> df &lt;-
+do.call(rbind, data) %&gt;% as.data.frame(stringsAsFactors = FALSE)</p>
+<p><strong>Attribuer les noms de colonnes extraits</strong> names(df)
+&lt;- headers</p>
+<p><strong>Nettoyer et convertir les données numériques</strong> df_cln
+&lt;- df %&gt;% mutate(across( .cols = -1, .fns = ~ { # Supprimer les
+espaces et remplacer la virgule par un point cleaned &lt;- gsub(” “,”“,
+.) cleaned &lt;- gsub(”,“,”.”, cleaned) # Convertir en numérique
+as.numeric(cleaned) } ))</p>
+<p>Ce code nous a permit de créer une tableau des taux de participation
+des communautés autochtones aux élections fédérales de 2004 à 2011
+ventilé selon la province.</p>
+<p>Nous avons utilisé une deuxième source de données, soit la taille de
+la population dans les circonscriptions où se trouvent des communautés
+autochtones au Canada ainsi que le nombre d’électeurs autochtones
+inscrits et le taux de participation de ces électeurs. Les données
+étaient présentées dans un document CSV et dans un rapport
+institutionnel d’Élection Canada. La compilation des données d’électeurs
+autochtones inscrits et de la participation électorale ont été ajoutées
+manuellement au document CSV des données populationnelles de chaque
+circonscription.</p>
+<p>Les données sont issues de 2021, ce qui pourrait potentiellement
+introduire un biais non-négligeable étant donnée que la croissance
+démographique des communautés autochtones est plus rapide que celles des
+communautés environnantes. Leur proportion dans les circonscriptions
+devrait avoir augmenté sensiblement entre 2011 et 2021. Cela dit, dans
+une perspective comparant les cas des communautés autochtones au Québec
+et celles du restes du Canada, il nous appert que la croissance
+relativement similaire entre les communautés des différentes provinces
+devrait être peu importante.</p>
+</div>
+</div>
+<div id="résultats" class="section level1">
+<h1>Résultats</h1>
+<div id="visualisation" class="section level2">
+<h2>Visualisation</h2>
+<p>Nous avons fait le choix de faire deux visualisation avec les données
+que nous avons extraites. La première visualisation est un graphique à
+ligne brisée pour montrer les tendances propres aux communautés de
+chaque provinces. Le second graphique est un diagramme en points. Il
+permet d’observer la différence importante de participation entre les
+communautés autochtones du Québec et celle des autres provinces
+canadiennes. Le code que nous avons roulé pour produire ces graphiques
+sont les suivants:</p>
+<p><strong>Préparer les données</strong> df_long &lt;- df_cln %&gt;%
+pivot_longer(cols = -“Province/territoire”, names_to = “Année”,
+values_to = “Taux_participation”)</p>
+<p><strong>Graphique linéaire</strong> ggplot(df_long, aes(x = Année, y
+= Taux_participation, group = <code>Province/territoire</code>, color =
+<code>Province/territoire</code>)) + geom_line() + geom_point() +
+theme_minimal() + labs( title = “Taux de participation aux élections
+fédérales par province (2004-2011)”, x = “Année”, y = “Taux de
+participation (%)”, color = “Province” ) + theme( axis.text.x =
+element_text(angle = 45, hjust = 1), legend.position = “right” ) +
+scale_color_manual(values = couleurs)</p>
+<p><strong>Créer un graphique boxplot</strong> ggplot(df_long, aes(x =
+Année, y = Taux_participation, group = “Province/territoire”, color =
+“Province/territoire”)) + geom_line() + geom_point() + theme_minimal() +
+labs(title = “Taux de participation aux élections fédérales par province
+(2004-2011)”, x = “Année”, y = “Taux de participation (%)”, color =
+“Province”) + theme(axis.text.x = element_text(angle = 45, hjust = 1),
+legend.position = “right”) + scale_color_manual(values = “red”)</p>
+<p><strong>Calcul de la proportion d’électeurs autochtones dans la
+population</strong> df &lt;- ED_Canada_2021_prov_tx_part %&gt;%
+mutate(prop_indigenous = ELECTEURS_AUTOCHTONES / POPULATION)</p>
+<p><strong>Calcul du coefficient de corrélation global</strong>
+correlation &lt;- cor(df<span class="math inline">\(prop_indigenous,
+df\)</span>TAUX_PARTICIPATION, use = “complete.obs”)</p>
+<p><strong>Affichage du résultat</strong> print(paste(“Le coefficient de
+corrélation est:”, round(correlation, 3)))</p>
+<p><strong>Création du graphique avec échelles logarithmiques</strong>
+ggplot(df, aes(x = prop_indigenous, y = TAUX_PARTICIPATION)) +
+geom_point(alpha = 0.6, color = “blue”) + # Nuage de points
+geom_smooth(method = “lm”, color = “red”, se = TRUE) + # Ligne de
+régression scale_x_log10() + # Échelle logarithmique pour l’axe X labs(
+title = “Relation (log) entre la proportion d’électeurs autochtones et
+le taux de participation”, x = “Proportion d’électeurs autochtones
+(log10)”, y = “Taux de participation (%)” ) + theme_minimal() + theme(
+plot.title = element_text(hjust = 0.5), # Centrage du titre text =
+element_text(size = 12) )</p>
+<p><strong>Calculer la proportion d’électeurs autochtones</strong> df
+&lt;- df %&gt;% mutate(prop_indigenous = ELECTEURS_AUTOCHTONES /
+POPULATION)</p>
+<p><strong>Calcul des coefficients de corrélation par province</strong>
+correlation_by_province &lt;- df %&gt;% group_by(PROV) %&gt;% summarize(
+correlation = cor(prop_indigenous, TAUX_PARTICIPATION, use =
+“complete.obs”) )</p>
+<p><strong>Affichage des résultats</strong>
+print(correlation_by_province)</p>
+<p><strong>Calcul de la proportion d’électeurs autochtones</strong> df
+&lt;- df %&gt;% mutate(prop_indigenous = ELECTEURS_AUTOCHTONES /
+POPULATION)</p>
+<p><strong>Création d’un graphique avec une facette par
+province</strong> ggplot(df, aes(x = prop_indigenous, y =
+TAUX_PARTICIPATION, color = PROV)) + geom_point(size = 1, alpha = 0.7) +
+geom_smooth(method = “lm”, se = FALSE, linetype = “dashed”, size = 1) +
+# Droites de régression scale_x_log10() + labs( title = “Proportion
+d’électeurs autochtones vs Taux de participation”, x = “Proportion
+d’électeurs autochtones (log10)”, y = “Taux de participation (%)” ) +
+facet_wrap(~PROV) + theme_minimal() + theme( plot.title =
+element_text(hjust = 0.5), # Centrage du titre text = element_text(size
+= 12), legend.position = “none” # Supprime la légende pour chaque
+facette )</p>
+<p>Ces codes ont été utilisés pour trouver et illustrer le coefficient
+de corrélation entre la proportion d’électeurs autochtones dans les
+circonscriptions fédérales et le taux de participation de ces électeurs
+en 2021. Nous avons fait un coefficient pour l’ensemble des
+circonscriptions, puis elles ont été regroupées selon la province, puis
+divisé entre le Québec et les reste du Canada.</p>
+</div>
+</div>
+<div id="discussion" class="section level1">
+<h1>Discussion</h1>
+<p>D’après les données que nous avons utilisées, nos hypothèses sont
+infirmées. Le coefficient de corrélation, bien que faible, montre que la
+relation entre la taille de la circonscription est au mieux associée à
+un faible effet négatif sur la participation électorale, sinon une
+corrélation nulle. Cette conclusion vient à l’encontre de la théorie du
+choix rationnel que nous testions avec l’hypothèse 1.</p>
+<p>Quant à l’hypothèse 2, elle est également infirmée par nos résultats.
+Nous nous attendions à observer une relation positive entre nos deux
+variables dans toutes les provinces, mais plus faibles au Québec. Or, au
+Québec, elle est négative comme dans plusieurs autres provinces, mais
+elle est plus faible que plusieurs autres provinces. Ainsi, la relation
+entre le taux de participation et la proportion d’électeurs autochtones
+est plus faible que dans plusieurs autres provinces, ce à quoi nous ne
+nous attendions pas.</p>
+<p>En somme, une différence entre le taux de participation ne peut être
+attribué à la taille, et son corrolaire la proportion d’électeurs
+autochtones, pour expliquer le taux de participation des électeurs
+autochtones du Québec et du reste du Canada.</p>
+<p>Pour aller plus loin, une analyse qui souhaiterait mobiliser la
+taille des circonscriptions devrait inclure les variables
+sociodémographiques puisqu’une proportion plus élevée d’électeurs
+autochtones dans une circonscription sont souvent en région éloignée où
+les caractéristiques socioéconomiques sont différentes.</p>
+</div>
+<div id="bibliographie" class="section level1">
+<h1>Bibliographie</h1>
+<p>Armstrong, D. A., Alcantara, C., &amp; Kennedy, J. (2023a). Exploring
+the effects of electorate size on indigenous voter turnout. Politics,
+Groups, and Identities, 11(1), 98‑107. <a href="https://doi.org/10.1080/21565503.2021.1926297" class="uri">https://doi.org/10.1080/21565503.2021.1926297</a></p>
+<p>Harellll, A., Panagos, D., &amp; Matthews, J. (2010). Explaining
+Aboriginal Turnout in Federal Elections : Evidence from Albe rta,
+Saskatchewan, and Manitoba.</p>
+<p>Hill, L., &amp; Alport, K. (2010). Voting Attitudes and Behaviour
+Among Aboriginal Peoples : Reports from Anangu Women. Australian Journal
+of Politics &amp; History, 56(2), 242‑258. <a href="https://doi.org/10.1111/j.1467-8497.2010.01552.x" class="uri">https://doi.org/10.1111/j.1467-8497.2010.01552.x</a></p>
+</div>
 
 
 
