--- a/index.html
+++ b/index.html
@@ -144,19 +144,18 @@
   <div class="container">
     <h3>Mes Projets</h3>
     <p>
-      Voici un court projet de recherche que j'ai récemment réalisé. Cliquez sur l'image pour découvrir le projet complet.
+      Voici une sélection de mes projets. Cliquez sur l'image pour découvrir le projet complet.
     </p>
     <div class="features">
       <article>
         <!-- Aperçu du projet en image -->
-        <a href="projet_Rmd.rmd" class="image" target="_blank">
-          <img src="projet_session/projet.png" alt="Aperçu du projet de session"/>
+        <a href="projet_session/projet.html" class="image" target="_blank">
+          <img src="projet_session/projet.png" alt="Aperçu du projet de session" />
         </a>
         <div class="inner">
-          <h4>Taille de la circonscription et participation électorale</h4>
+          <h4>Cours d'outils numériques (POL-6078)</h4>
           <p>
-            Quelle relation entre la proportion d'électeurs autochtones et la participation électorale ?
-            Intuitivement, quand le poids de ce groupe d'électeurs augmente, leur participation devrait en faire de même, mais est-ce réellement le cas ?
+            Cliquez sur l'image ou sur le lien ci-dessous pour explorer le contenu de ce projet.
           </p>
           <!-- Lien direct vers le projet -->
           <p>
@@ -169,7 +168,6 @@
     </div>
   </div>
 </section>
-
 
         <!-- Four -->
         <section id="four">
