rédaction résultats, et choix outils

--- a/projet_session/projet.html
+++ b/projet_session/projet.html
@@ -464,8 +464,12 @@ de recherche. Nous avons donc utilisé les mêmes articles.</p>
 </div>
 <div id="méthodes-et-données" class="section level1">
 <h1>Méthodes et données</h1>
-<div id="méthodologie" class="section level2">
-<h2>Méthodologie</h2>
+<div id="méthodes" class="section level2">
+<h2>Méthodes</h2>
+<p>Nous avons procédé à une régression linéaire simple où Y est le taux
+de participation des électeurs s’identifiant autochtone, X est la
+proportion d’électeurs autochtones dans la circonscription et β1 est le
+coefficient de régression.</p>
 </div>
 <div id="extraction-des-données" class="section level2">
 <h2>Extraction des données</h2>
@@ -597,10 +601,22 @@ circonscriptions fédérales et le taux de participation de ces électeurs
 en 2021. Nous avons fait un coefficient pour l’ensemble des
 circonscriptions, puis elles ont été regroupées selon la province, puis
 divisé entre le Québec et les reste du Canada.</p>
+<p>Les résultats illustrent d’abord que la participation aux élections
+fédérales dans les communautés autochtones dans la province de Québec
+entre 2004 et 2011 est plus faible que celles dans les autres provinces
+et territoires. En moyenne, l’écart est de 33,6 points d’écart avec la
+moyenne du reste du Canada.</p>
+<p>Pour ce qui est de la participation aux élections de 2021, la
+corrélation entre la proportion d’électeurs autochtones dans une
+circonscription et la participation électorale n’est pas plus négative
+au Québec que dans d’autres provinces. Le coefficient de corrélation est
+de -0,235 au Québec tandis qu’ils est plus négatif en Ontario (-0,296),
+en Nouvelle-Écosse (-,370), au Manitoba (-0,433) et en Saskatchewan
+(-0,645).</p>
 </div>
 </div>
-<div id="discussion" class="section level1">
-<h1>Discussion</h1>
+<div id="conclusion-et-discussion" class="section level1">
+<h1>Conclusion et discussion</h1>
 <p>D’après les données que nous avons utilisées, nos hypothèses sont
 infirmées. Le coefficient de corrélation, bien que faible, montre que la
 relation entre la taille de la circonscription est au mieux associée à
@@ -627,6 +643,31 @@ sociodémographiques puisque les circonscription qui ont proportion plus
 campagnes électorales ou encore le profil sociodémographiques des
 électeurs se distinguent généralement des circonscriptions
 métropolitaines.</p>
+</div>
+<div id="choix-des-outils" class="section level1">
+<h1>Choix des outils</h1>
+<p>L’utilisation de R a été un choix évident pour réaliser ce projet, et
+ce pour quatre raisons. La première est la popularité de l’outil dans
+communauté scientifique de science politique. Ce court projet nous aura
+permis de se familiariser et d’acquérir des habilités techniques pour
+faire de la recherche pour les prochaines années. La deuxième raison est
+l’accessibilité de l’outil: la présence dde logiciel d’Intelligence
+artificielle, d’une large communauté d’utilisateur et de sa gratuité
+diminue le coût d’acquisition bien plus faible étant donné que les
+problèmes rencontrés ont généralement été répertoriés par d’autres
+chercheurs et peuvent facilement être controurné avbec l’aide de l’IA.
+En plus, sa gratuité permet d’en faire un outil de choix puisqu’il n’est
+pas dit qu’un employeur futut souscrira à une license onéreuse d’un
+logiciel propriétaire concurrent. Enfin, la troisième raison pour
+laquelle cet outil a été utilisé est pour la transparence et la
+réplicabilité du processus, des valeurs qui émergent rapidement dans le
+domaine. Les codes qui nous ont permis de générer nos résultats sont
+accessibles à la communauté qui pourra le rouler elle-même assurer de la
+véracité de nos analyses. La dernière raison est la capacité de faire
+toutes les étapes de la recherche au sein du même outil. Ici, nous avons
+extraits des données, analyser et visualiser les données, ce qui est un
+avantage indéniable pour éviter les erreurs ou les pertes de temps liées
+transférer les données d’un logiciel à l’autre.</p>
 </div>
 <div id="bibliographie" class="section level1">
 <h1>Bibliographie</h1>
