enregistrer les modifications, ne reste qu'à ce que les deux dernies graphiques print dans le rmarkdown

--- a/projet_session/projet.html
+++ b/projet_session/projet.html
@@ -612,7 +612,9 @@ circonscription et la participation électorale n’est pas plus négative
 au Québec que dans d’autres provinces. Le coefficient de corrélation est
 de -0,235 au Québec tandis qu’ils est plus négatif en Ontario (-0,296),
 en Nouvelle-Écosse (-,370), au Manitoba (-0,433) et en Saskatchewan
-(-0,645).</p>
+(-0,645). Cependant, au sein de l’ensemble canadien, le coefficient de
+corrélation de la province de Québec est inférieur à celui de toutes les
+provinces qui est de -0,112.</p>
 </div>
 </div>
 <div id="conclusion-et-discussion" class="section level1">
