ajouter description projet dans site web

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
           <img src="projet_session/projet.png" alt="Aperçu du projet de session" />
         </a>
         <div class="inner">
-          <h4>Cours d'outils numériques (POL-6078)</h4>
+          <h4>Plus c'est mieux ?</h4>
           <p>
-            Cliquez sur l'image ou sur le lien ci-dessous pour explorer le contenu de ce projet.
+            La proportion d'électeurs autochtones dans une circonscription a-t-elle une influence positive sur la participation électorale ?
           </p>
           <!-- Lien direct vers le projet -->
           <p>
